--- a/src/css/components/nav-secondary.css
+++ b/src/css/components/nav-secondary.css
@@ -60,8 +60,8 @@
       left: 0;
       bottom: 0;
       width: 100%;
-      height: 2px;
-      background-color: currentColor;
+      height: 0;
+      border-top: solid 2px currentColor;
       opacity: 0;
       transform: translatey(5px);
       transition: opacity 0.2s, transform 0.2s;
