--- a/src/css/components/table.css
+++ b/src/css/components/table.css
@@ -101,6 +101,10 @@ table {
           rgba(0,0,0,0.2),
           rgba(0,0,0,0)
         ) 100% 0%;
+
+    @media screen and (-ms-high-contrast: active) {
+      background: none; /* FF & Edge's high contrast does show the background image, so we hide it. */
+    }
   }
 }
 
