--- a/src/css/components/header-search-narrow.css
+++ b/src/css/components/header-search-narrow.css
@@ -11,7 +11,9 @@
   }
 
   @media (--nav) {
-    display: none;
+    body:not(.is-always-mobile-nav) & {
+      display: none;
+    }
   }
 
   form {
