--- a/src/css/components/main.css
+++ b/src/css/components/main.css
@@ -122,7 +122,9 @@ main {
     }
 
     @media (--nav) {
-      width: calc(10 * var(--grid-col-width--nav) + 9 * var(--grid-gap--nav));
+      body:not(.is-always-mobile-nav) & {
+        width: calc(10 * var(--grid-col-width--nav) + 9 * var(--grid-gap--nav));
+      }
     }
 
     @media (--grid-max) {
@@ -146,7 +148,9 @@ main {
       }
 
       @media (--nav) {
-        left: calc(-1 * (var(--grid-col-width--nav) + var(--grid-gap--nav)));
+        body:not(.is-always-mobile-nav) & {
+          left: calc(-1 * (var(--grid-col-width--nav) + var(--grid-gap--nav)));
+        }
       }
 
       @media (--grid-max) {
@@ -176,7 +180,9 @@ main {
       }
 
       @media (--nav) {
-        left: calc(-1 * (var(--grid-col-width--nav) + var(--grid-gap--nav)));
+        body:not(.is-always-mobile-nav) & {
+          left: calc(-1 * (var(--grid-col-width--nav) + var(--grid-gap--nav)));
+        }
       }
 
       @media (--grid-max) {
