--- a/src/css/components/header-search-wide.css
+++ b/src/css/components/header-search-wide.css
@@ -22,7 +22,9 @@
   }
 
   @media (--nav) {
-    display: block;
+    body:not(.is-always-mobile-nav) & {
+      display: block;
+    }
   }
 
   form {
@@ -114,7 +116,9 @@
   cursor: pointer;
 
   @media (--nav) {
-    display: block;
+    body:not(.is-always-mobile-nav) & {
+      display: block;
+    }
   }
 
   &:focus {
