--- a/src/css/components/social-container.css
+++ b/src/css/components/social-container.css
@@ -1,8 +1,10 @@
 .social-container {
   @media (--nav) {
-    width: var(--content-left);
-    flex-shrink: 0;
-    background-color: var(--color--gray-95);
+    body:not(.is-always-mobile-nav) & {
+      width: var(--content-left);
+      flex-shrink: 0;
+      background-color: var(--color--gray-95);
+    }
   }
 }
 
@@ -12,16 +14,18 @@
   justify-content: flex-end;
 
   @media (--nav) {
-    writing-mode: vertical-rl;
-    transform: rotate(180deg);
-    width: var(--content-left);
-    text-align: right; /* IE11 */
+    body:not(.is-always-mobile-nav) & {
+      writing-mode: vertical-rl;
+      transform: rotate(180deg);
+      width: var(--content-left);
+      text-align: right; /* IE11 */
 
-    img {
-      margin: 10px 5px 10px 10px; /* IE11 */
+      img {
+        margin: 10px 5px 10px 10px; /* IE11 */
 
-      @supports (display: block) { /* Override IE11 values. */
-        margin: 10px;
+        @supports (display: block) { /* Override IE11 values. */
+          margin: 10px;
+        }
       }
     }
   }
@@ -39,15 +43,17 @@
   background-color: var(--color--gray-95);
 
   @media (--nav) {
-    position: relative;
-    width: var(--content-left);
-    padding: calc(9 * var(--sp)) 0;
+    body:not(.is-always-mobile-nav) & {
+      position: relative;
+      width: var(--content-left);
+      padding: calc(9 * var(--sp)) 0;
 
-    &.js-fixed {
-      position: fixed;
-      top: var(--sp6);
-      left: 0;
-      height: calc(100vh - 6 * var(--sp))
+      &.js-fixed {
+        position: fixed;
+        top: var(--sp6);
+        left: 0;
+        height: calc(100vh - 6 * var(--sp))
+      }
     }
   }
 }
