13476291: updated location of close button when menu always mobile at large device widths

--- a/src/css/components/header-buttons-mobile.css
+++ b/src/css/components/header-buttons-mobile.css
@@ -18,3 +18,14 @@
     }
   }
 }
+
+.is-always-mobile-nav {
+  .mobile-nav-button[aria-expanded="true"] {
+    @media (--grid-max) {
+      position: fixed;
+      top: var(--sp4);
+      right: var(--sp);
+      z-index: 10;
+    }
+  }
+}
