--- a/src/css/components/nav-button-wide.css
+++ b/src/css/components/nav-button-wide.css
@@ -4,7 +4,7 @@
   display: none;
 
   @media (--nav) {
-    body:not(.is-always-mobile-nav) & {
+    /* body:not(.is-always-mobile-nav) & { */
       visibility: hidden;
       display: flex;
       flex-shrink: 0;
@@ -21,10 +21,14 @@
         border: solid 1px transparent; /* Will show in IE/Edge high contrast mode. */
       }
 
-      .js-fixed & {
+      body:not(.is-always-mobile-nav) .js-fixed & {
         visibility: visible;
       }
-    }
+
+      body.is-always-mobile-nav & {
+        visibility: hidden;
+      }
+    /* } */
   }
 }
 
