--- a/src/css/base/base.css
+++ b/src/css/base/base.css
@@ -13,6 +13,10 @@ body {
   &.js-fixed {
     position: fixed;
     overflow: hidden;
+
+    &.is-always-mobile-nav {
+      width: 100%; /* Prevent width from collapsing. */
+    }
   }
 }
 
