--- a/src/css/components/header-search-wide.css
+++ b/src/css/components/header-search-wide.css
@@ -102,6 +102,7 @@
         width: 100%;
         height: 0;
         transform: scalex(0);
+        transform-origin: left;
         border-top: solid var(--sp0-5) var(--color--blue-50);
         transition: transform 0.2s;
       }
