--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,7 @@
 @import 'components/nav-button-mobile.css';
 @import 'components/nav-button-wide.css';
 @import 'components/nav-primary.css';
+@import 'components/nav-primary-button.css';
 @import 'components/nav-secondary.css';
 @import 'components/header-buttons-mobile.css';
 @import 'components/header-search-narrow.css';
