Various accessibility keyboard nav improvements for always on mobile nav.

--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -165,6 +165,17 @@
         transform: translatex(-100%);
       }
     }
+
+    /* html:not(.js) & {
+      visibility: visible;
+      position: static;
+      padding: 0;
+      grid-column: 1 / -1;
+      transform: none;
+      border: 0;
+      max-width: none;
+      padding: var(--sp);
+    } */
   }
 
   @media (--grid-max) {
